--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "tsx server.ts",
+   "server": "npx prisma migrate deploy && tsx server.ts",
     "server:dev": "nodemon --exec tsx server.ts",
     "build": "vite build",
     "lint": "eslint .",
